# requests-cpp

./: .gitignore  CMakeLists.txt
src/: cookies.cpp  error.cpp  parameters.cpp  session.cpp  util.cpp
src/include/: Response.h  cookies.h  error.h  parameters.h  requests.h  session.h  types.h  util.h
test/: test.cpp
